--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
@@ -128,7 +128,7 @@
         </div>
 
         <input type="hidden" id="goPage" name="goPage">
-        <div style="position:absolute;right:2em;bottom:7em;font-size:0.8em">Inline, Stagger stage can skop this step</div>
+        <div style="position:absolute;right:2em;bottom:7em;font-size:0.8em">Inline, Stagger stage can skip this step</div>
         <button id="btnBack" onclick="this.form.submitted=this.value;" type="submit" value="Back" style="right:7em;" class="button">Back</button>
         <button d="btnNext" onclick="this.form.submitted=this.value;" type="submit" value="Next" style="right:0;" class="button">Next</button>
 
