--- a/Quality/Quality/Areas/StyleManagement/Views/StyleResult/Index.cshtml
+++ b/Quality/Quality/Areas/StyleManagement/Views/StyleResult/Index.cshtml
@@ -213,10 +213,10 @@
                                 <span class="detail_Head" id="Program">@Model.ProgramID</span>
                             </td>
                             <td style="width:10vw;border: 1px solid gray;background-color:#696868;vertical-align: middle;">
-                                <label>Handdle</label>
+                                <label>Handle</label>
                             </td>
                             <td style=" border: 1px solid gray;vertical-align: middle;width: 25vw;">
-                                <span class="detail_Head" id="Handdle">@Model.Handle</span>
+                                <span class="detail_Head" id="Handle">@Model.Handle</span>
                             </td>
                         </tr>
                         <tr>
@@ -262,7 +262,7 @@
                 <div id="tab-Change">
                     <ul class="tab-title">
                         <li link="#tab01" class="active">Sample RFT</li>
-                        <li link="#tab02">FTY Disclamier</li>
+                        <li link="#tab02">FTY Disclaimer</li>
                         <li link="#tab03">RR/LR</li>
                         <li link="#tab04">Bulk FGT</li>
                     </ul>
