--- a/Quality/Quality/Areas/StyleManagement/Views/StyleResult/_Tab2_Layout.cshtml
+++ b/Quality/Quality/Areas/StyleManagement/Views/StyleResult/_Tab2_Layout.cshtml
@@ -3,9 +3,9 @@
 @model StyleResult_ViewModel
 
 @{
-    string ExpectionFormStatus = (Model.FTYDisclamier.Any() ? Model.FTYDisclamier.FirstOrDefault().ExpectionFormStatus : "");
-    string ExpectionFormDate = (Model.FTYDisclamier.Any() && Model.FTYDisclamier.FirstOrDefault().ExpectionFormDate.HasValue ? Model.FTYDisclamier.FirstOrDefault().ExpectionFormDate.Value.ToShortDateString() : "");
-    string ExpectionFormRemark = (Model.FTYDisclamier.Any() ? Model.FTYDisclamier.FirstOrDefault().ExpectionFormRemark : "");
+    string ExpectionFormStatus = (Model.FTYDisclaimer.Any() ? Model.FTYDisclaimer.FirstOrDefault().ExpectionFormStatus : "");
+    string ExpectionFormDate = (Model.FTYDisclaimer.Any() && Model.FTYDisclaimer.FirstOrDefault().ExpectionFormDate.HasValue ? Model.FTYDisclaimer.FirstOrDefault().ExpectionFormDate.Value.ToShortDateString() : "");
+    string ExpectionFormRemark = (Model.FTYDisclaimer.Any() ? Model.FTYDisclaimer.FirstOrDefault().ExpectionFormRemark : "");
 
 }
 
@@ -38,7 +38,7 @@
         <table style="border: 1px solid gray;font-size: 1vw;width: 100%;height: 50%;background-color: transparent;color: black;">
             <tr>
                 <td style="width:10vw;border: 1px solid gray;vertical-align: middle;">
-                    FTY Disclamier
+                    FTY Disclaimer
                 </td>
                 <td style="border: 1px solid gray;vertical-align: middle;width: 25vw;">
                     @ExpectionFormStatus
@@ -68,9 +68,9 @@
                 </tr>
             </thead>
             <tbody>
-                @if (Model.FTYDisclamier.Any())
+                @if (Model.FTYDisclaimer.Any())
                 {
-                    foreach (var item in Model.FTYDisclamier)
+                    foreach (var item in Model.FTYDisclaimer)
                     {
                         <tr class="row-content" style="vertical-align: middle; text-align: center;">
                             <td>@item.Article</td>
