--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab7_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab7_Layout.cshtml
@@ -30,7 +30,7 @@
 <table class="al-m" style="width: 80% ;margin-top: 4vh;">
     <tr>
         <td class="ColumnStype ColunTD TDStyle"><label class="Font">Production Status</label></td>
-        <td class="ContentText TDStyle"> @Html.DisplayFor(o => o.FinalInspection.ProductionStatus)</td>
+        <td class="ContentText TDStyle"> @Html.DisplayFor(o => o.FinalInspection.ProductionStatus) %</td>
     </tr>
     <tr>
         <td class="ColumnStype ColunTD TDStyle"><label class="Font">Other Photo</label></td>
