--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Index.cshtml
@@ -441,7 +441,7 @@
                                 </td>
                                 <td style="width:10vw;">
                                     <div class="input-group">
-                                        @Html.TextBoxFor(o => Model.garmentTest_Details[i].inspector, "", new { @class = "Inspector" })
+                                        @Html.TextBoxFor(o => Model.garmentTest_Details[i].inspector, new { @class = "Inspector" })
                                         <input class="btnDetailInspectorSelectItem site-btn btn-blue" type="button" style="margin:0;border:0;" value="..." />
                                     </div>
                                 </td>
