--- a/Quality/Quality/Areas/StyleManagement/Views/ExceptionFD/Index.cshtml
+++ b/Quality/Quality/Areas/StyleManagement/Views/ExceptionFD/Index.cshtml
@@ -87,7 +87,7 @@
 
         <div class="content-scroll">
             <div class="inner-scroll" style="float:left">
-                <h3 style="color:white"> FD Date after @DateTime.Now.ToShortDateString()</h3>
+                <h3 style="color:white"> FD Date after @DateTime.Now.AddYears(-2).ToShortDateString()</h3>
                 <br />
 
                 <div>
