--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
@@ -315,7 +315,7 @@
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td><h4>Temperature(oC)</h4></td>
+                                            <td><h4>Temperature(˚C)</h4></td>
                                             <td>
                                                 <select id="Detail_Temperature" name="Detail.Temperature">
                                                     @foreach (var item in (List<SelectListItem>)ViewBag.TemperatureList)
