ISP20211068 - [Mockup Wash] 調整

--- a/Quality/Quality/Areas/BulkFGT/Views/MockupWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupWash/Index.cshtml
@@ -1327,6 +1327,11 @@
         var SeasonID = $('#SeasonID').val();
         var StyleID = $('#StyleID').val();
 
+        if (BrandID == "" || SeasonID == "" || StyleID == "")
+        {
+            return;
+        }
+
         $.ajax({
             url: '@Url.Action("GetArtworkTypeID_Source", "MockupWash")',
             type: 'POST',
